--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "vscode": "^1.52.0"
   },
-  "publisher": "Mayank Vamja",
+  "publisher": "MayankVamja",
   "icon": "resources/icon.svg",
   "categories": [
     "Programming Languages", 
