--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "vscode": "^1.52.0"
   },
   "publisher": "MayankVamja",
-  "icon": "resources/icon.svg",
+  "icon": "resources/icon.png",
   "categories": [
     "Programming Languages", 
     "Snippets",
